# matlab-mexutils

./: .gitignore  CMakeLists.txt  LICENSE  README.md
+mexcpp/: BaseClass.m  CopyableBaseClass  CopyableBaseClass.m
docs/: Doxyfile.in
examples/: CMakeLists.txt  mexClass_demo.m  mexCounter.cpp  mexCounter_demo.m  mexcpp_demo.m
examples/@mexClass/: CMakeLists.txt  mexClass.m  mexClass_mexfcn.cpp
examples/@mexClass_demo/: CMakeLists.txt  mexClass_demo.m  mexClass_demo_backend.cpp
include/: mexAllocator.h  mexClassHandler.h  mexGetString.h  mexObjectHandler.h  mexRuntimeError.h
